# ViewPortal

./: CMakeLists.txt  LICENSE  README.md
apps/: realsense_app.cpp  viewportal_app.cpp
config/: params.cfg
examples/realsense/: CMakeLists.txt  realsense_app.cpp
examples/viewportal_sample/: CMakeLists.txt  viewportal_sample.cpp
include/: viewport.h  viewportal.h  viewportal_params.h
src/: viewport_color_camera.cpp  viewport_colored_depth.cpp  viewport_depth_camera.cpp  viewport_factory.cpp  viewport_g8.cpp  viewport_plot.cpp  viewport_reconstruction.cpp  viewport_rgb8.cpp  viewportal_display.cpp  viewportal_params.cpp
